# foudinge

./: LICENSE  README.md  extract_outlines.py  get_data.py  infer_entities.py  make_graph.py  pyproject.toml  unescape.py
foudinge/: data.py  entities.py
